@@ -1,3 +1,8 @@
+=== (In Git)
+
+* Enhancements:
+  * Upgraded RubyGems to version 1.8.30
+
 === 2014-11-16
 
 * Enhancements:
